@@ -60,6 +60,7 @@ version ? (????-??-??)
     to a customer with yearly period, payment will be accounted once a year with tariff
     value multiplied by 12 (alec)
   - BTS#0000844: fixed traffic graph when using customer filter (alec)
+  - Added device nodes count on devices list in channel info (alec)
 
 version 1.11.10 Kri (2010-04-19)
 
